--- a/mocks/mock-oidc/login.html
+++ b/mocks/mock-oidc/login.html
@@ -26,7 +26,7 @@
                     <form method="post">
                         <input type="hidden" name="username" value="sarah_saksbehandler">
                         <input type="hidden" name="claims" value='{"NAVident": "SARAH", "name": "Sarah Saksbehandler", "preferred_username": "Sarah", "groups": ["saksbehandler", "attestant"]}'>
-                        <button type="submit" class="btn btn-primary topBtn"><i class="fa fa-sign-in"></i>Sign-in</button>
+                        <button type="submit" class="btn btn-primary topBtn" autofocus><i class="fa fa-sign-in"></i>Sign-in</button>
                     </form>
                 </div>
             </div>
