--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,8 @@
       name="description"
       content="Saksbehandling og utbetaling På enkle Reger"
     />
-
+    <link rel="icon" type="image/svg+xml" href="/logo.svg"/>
+    <link rel="mask-icon" type="image/svg+xml" href="/logo.svg" color="#0B3D91"/>
     <title>Superhelt</title>
   </head>
   <body>
