Driftsrolle lagt inn for admin endepunkt

--- a/mocks/mock-oidc/login.html
+++ b/mocks/mock-oidc/login.html
@@ -60,6 +60,7 @@
                     </form>
                 </div>
             </div>
+
         </div>
 
         <div class="col-md-5">
@@ -75,6 +76,20 @@
                     <form method="post">
                         <input type="hidden" name="username" value="lisa_les">
                         <input type="hidden" name="claims" value='{"NAVident": "LISA_LES", "name": "Lisa les", "preferred_username": "Lisa", "groups": ["gr_les"]}'>
+                        <button type="submit" class="btn btn-primary topBtn"><i class="fa fa-sign-in"></i>Sign-in</button>
+                    </form>
+                </div>
+            </div>
+            <div class="card mb-2">
+                <div class="card-header">
+                    Featured
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">David Driftsmann</h5>
+                    <p class="card-text">Drifter som har driftsrolle, men ikke saksbehandler</p>
+                    <form method="post">
+                        <input type="hidden" name="username" value="david_driftsmann">
+                        <input type="hidden" name="claims" value='{"NAVident": "DAVE", "name": "David Driftsmann", "preferred_username": "Davy", "groups": ["gr_drift"]}'>
                         <button type="submit" class="btn btn-primary topBtn"><i class="fa fa-sign-in"></i>Sign-in</button>
                     </form>
                 </div>
